--- a/wrapper/orbitals.pyx.in
+++ b/wrapper/orbitals.pyx.in
@@ -36,6 +36,9 @@ cdef class {{Prefix}}Orbitals:
     def init(self):
         self.cdata.init()
 
+    def init_shell(self, int shell):
+        self.cdata.init_shell(shell)
+
     def ort(self):
         self.cdata.ort()
 
@@ -103,6 +106,14 @@ cdef class {{Prefix}}Orbitals:
             self.cdata.z_ne(res_ptr, <sh_f> mask.cdata[0])
 
         return z
+
+    def collect(self, np.ndarray[complex_t, ndim=3] dest, int Nl = -1):
+        cdef cdouble* res_ptr = NULL
+        if self.is_root():
+            res_ptr = <cdouble*>dest.data
+
+        self.cdata.collect(res_ptr, Nl)
+
 
     def n_sp(self, SpGrid grid, YlmCache ylm_cache, np.ndarray[np.double_t, ndim=2] n = None):
         cdef np.ndarray[np.double_t, ndim=2, mode='c'] n_local = np.ndarray(grid.shape, dtype=np.double)
