--- a/wrapper/wavefunc.pyx.in
+++ b/wrapper/wavefunc.pyx.in
@@ -47,6 +47,10 @@ cdef class {{Prefix}}Wavefunc:
     def __init__(self, {{Grid}} grid, int m=0, dealloc=True):
         pass
 
+    @property
+    def m(self):
+        return self.cdata.m
+
     def init_p(self, double p, int l_max=-1):
         self.cdata.init_p(p, l_max)
 
